<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?backgroundLayoutColorRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_security_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:errorEnabled="true">

            <com.zesium.android.betting.ui.widgets.SFFontEditText
                android:id="@+id/et_security_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:drawableRight="@drawable/ic_arrow_drop_down"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/security_question"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="@color/text_gray"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_security_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:errorEnabled="true">

            <com.zesium.android.betting.ui.widgets.SFFontEditText
                android:id="@+id/et_security_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:hint="@string/security_answer"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxEms="20"
                android:singleLine="true"
                android:textColor="@color/text_gray"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/btn_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_default"
                android:text="@string/change"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
