<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundLayoutColorRegistration"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:errorEnabled="true">

            <com.zesium.android.betting.ui.widgets.SFFontEditText
                android:id="@+id/et_confirmation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:gravity="center"
                android:ems="4"
                android:hint="@string/confirmation_code"
                android:textColor="@color/text_gray"
                android:inputType="number"
                android:maxLength="4"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/confirm_btn"
            android:enabled="true" />

        <com.zesium.android.betting.ui.widgets.SFFontTextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@color/primary_red" />
    </LinearLayout>

    <com.zesium.android.betting.ui.widgets.SFFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxLines="4"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/text_gray"

        android:text="@string/lorem" />

    <com.zesium.android.betting.ui.widgets.SFFontTextView
        android:id="@+id/tv_send_new_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/send_new_code"
        android:textColor="@color/primary_red"
        android:visibility="gone"/>
</LinearLayout>
